# patchpilot-croo

./: .env.example  .gitignore  DEMO_SCRIPT.md  LICENSE  README.md  SUBMISSION.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  railway.toml
backend/src/patchpilot/: __init__.py  api.py  commerce.py  croo_commerce.py  evidence.py  live.py  models.py  orchestrator.py  proof.py  specialists.py
backend/tests/: test_api.py  test_core.py  test_live_contract.py
config/agent-store/: fixer.json  patchpilot.json  verifier.json
demo-fixture/: calculator.py  test_calculator.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: agent-flow.tsx  badge.tsx  mission-console.tsx
frontend/lib/: demo.ts  types.ts
scripts/: verify_demo_patch.py
