[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "patchpilot"
version = "0.1.0"
description = "Autonomous software maintenance buyer for the CROO Agent Protocol"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.115,<1", "uvicorn[standard]>=0.30,<1"]

[project.optional-dependencies]
croo = ["croo-sdk>=0.1"]
test = ["pytest>=8,<9", "httpx>=0.27,<1"]

[project.scripts]
patchpilot-api = "patchpilot.api:run"
patchpilot-provider = "patchpilot.live:run_patchpilot"
patchpilot-fixer = "patchpilot.live:run_fixer"
patchpilot-verifier = "patchpilot.live:run_verifier"
patchpilot-customer = "patchpilot.live:run_customer"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
